validation added week06
